--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
 ## 数据库配置
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://47.103.4.115:3306/timo?useSSL=false&characterEncoding=utf-8
+    url: jdbc:mysql://10.85.16.64:3306/timo?useSSL=false&characterEncoding=utf-8
     username: root
-    password: 20141232
+    password: rjxy240
 
 ## jpa配置
   jpa:
